<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/AppMenuTheme">

    <item android:id="@+id/readContacts"
        android:title="@string/readContacts"
        android:orderInCategory="1"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/save"
        android:title="@string/save"
        android:orderInCategory="2"
        app:showAsAction="never"
        />
    <item android:id="@+id/load"
        android:title="@string/load"
        android:orderInCategory="3"
        app:showAsAction="never"
        />
    <item android:id="@+id/exportfile"
        android:title="@string/exportfile"
        android:orderInCategory="5"
        app:showAsAction="never"
        />
    <item android:id="@+id/importfile"
        android:title="@string/importfile"
        android:orderInCategory="4"
        app:showAsAction="never"
        />

</menu>